# local-model-eval

./: .gitignore  README.md  eval.py  pyproject.toml
